# immich-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: checks.yml  ci.yml  release.yml
src/: api.rs  config.rs  event_log.rs  hash.rs  lib.rs  local_db.rs  main.rs  policy.rs  sync.rs
src/workers/: deletion_watcher.rs  discovery.rs  file_watcher.rs  mod.rs  uploader.rs
tests/integration/: common.rs  dedup.rs  deletion_policy.rs  dry_run.rs  event_log.rs  filtering.rs  local_changes.rs  main.rs  remote_changes.rs  startup.rs
