[package]
name = "sync-service"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
env_logger = "0.11.9"
log = "0.4.29"
notify = "8.2.0"
reqwest = { version = "0.13.2", features = ["multipart", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
walkdir = "2.5.0"

[dev-dependencies]
serial_test = "3"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
rusqlite = { version = "0.32", features = ["bundled"] }
